C/error
main.c: In function ‘main’:
main.c:154:12: error: incompatible type for argument 6 of ‘f_clambda’
            f_clambda(N,znorm,v,gsc,cum,&x,clambda);
            ^
main.c:6:5: note: expected ‘double’ but argument is of type ‘double *’
 int f_clambda(int n, double *znorm, double *v, double *gsc, double *cum, double x, double *clambda);
     ^
main.c:165:59: error: called object ‘clambda’ is not a function or function pointer
            fprintf(salida,"%lf %lf %lf %lf\n",e,fi,clambda(1),clambda(2));
                                                           ^
main.c:29:26: note: declared here
 double *cum,*znorm,*gsc,*clambda,*v,*f;
                          ^
main.c:165:70: error: called object ‘clambda’ is not a function or function pointer
            fprintf(salida,"%lf %lf %lf %lf\n",e,fi,clambda(1),clambda(2));
                                                                      ^
main.c:29:26: note: declared here
 double *cum,*znorm,*gsc,*clambda,*v,*f;
                          ^
make: *** [lyap] Error 1
